k8s/ingress_s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: gateway.co
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 3000
        path: /
